Updated: Added space between JUR balance and JUR symbol and avoid wrap. Fix: #21

--- a/src/components/common/ProfilePreview/ProfilePreview.scss
+++ b/src/components/common/ProfilePreview/ProfilePreview.scss
@@ -90,6 +90,7 @@
 
       &__value {
         font-size: 14px;
+        white-space: nowrap;
         //color: $white;
       }
     }
